// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ContactList/> shallow mount should render <ContactList/> with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContactList
    data={
        Array [
            Object {
              "address": "0x3123123",
              "name": "mike",
            },
            Object {
              "address": "0x123123123",
              "name": "joe",
            },
          ]
    }
    layout="horizontal"
    message="There are no contacts added yet."
    onDelete={[Function]}
    onEdit={[Function]}
    size="small"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <ContactList.style__StyledList
          dataSource={
                    Array [
                              Object {
                                "address": "0x3123123",
                                "name": "mike",
                              },
                              Object {
                                "address": "0x123123123",
                                "name": "joe",
                              },
                            ]
          }
          itemLayout="horizontal"
          renderItem={[Function]}
          size="small"
/>,
        <Modal.style
          destroyOnClose={true}
          footer={null}
          maskClosable={true}
          maskStyle={
                    Object {
                              "background": "rgba(232,237,239,.65)",
                            }
          }
          onCancel={[Function]}
          style={
                    Object {
                              "marginTop": "20px",
                            }
          }
          visible={false}
          width="585px"
>
          <Form(EditContactModal)
                    address=""
                    name=""
                    onChange={[Function]}
                    onEdit={[Function]}
                    validateEdit={[Function]}
          />
</Modal.style>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "dataSource": Array [
            Object {
              "address": "0x3123123",
              "name": "mike",
            },
            Object {
              "address": "0x123123123",
              "name": "joe",
            },
          ],
          "itemLayout": "horizontal",
          "renderItem": [Function],
          "size": "small",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <Form(EditContactModal)
            address=""
            name=""
            onChange={[Function]}
            onEdit={[Function]}
            validateEdit={[Function]}
/>,
          "destroyOnClose": true,
          "footer": null,
          "maskClosable": true,
          "maskStyle": Object {
            "background": "rgba(232,237,239,.65)",
          },
          "onCancel": [Function],
          "style": Object {
            "marginTop": "20px",
          },
          "visible": false,
          "width": "585px",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "address": "",
            "name": "",
            "onChange": [Function],
            "onEdit": [Function],
            "validateEdit": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <ContactList.style__StyledList
            dataSource={
                        Array [
                                    Object {
                                      "address": "0x3123123",
                                      "name": "mike",
                                    },
                                    Object {
                                      "address": "0x123123123",
                                      "name": "joe",
                                    },
                                  ]
            }
            itemLayout="horizontal"
            renderItem={[Function]}
            size="small"
/>,
          <Modal.style
            destroyOnClose={true}
            footer={null}
            maskClosable={true}
            maskStyle={
                        Object {
                                    "background": "rgba(232,237,239,.65)",
                                  }
            }
            onCancel={[Function]}
            style={
                        Object {
                                    "marginTop": "20px",
                                  }
            }
            visible={false}
            width="585px"
>
            <Form(EditContactModal)
                        address=""
                        name=""
                        onChange={[Function]}
                        onEdit={[Function]}
                        validateEdit={[Function]}
            />
</Modal.style>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "dataSource": Array [
              Object {
                "address": "0x3123123",
                "name": "mike",
              },
              Object {
                "address": "0x123123123",
                "name": "joe",
              },
            ],
            "itemLayout": "horizontal",
            "renderItem": [Function],
            "size": "small",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Form(EditContactModal)
              address=""
              name=""
              onChange={[Function]}
              onEdit={[Function]}
              validateEdit={[Function]}
/>,
            "destroyOnClose": true,
            "footer": null,
            "maskClosable": true,
            "maskStyle": Object {
              "background": "rgba(232,237,239,.65)",
            },
            "onCancel": [Function],
            "style": Object {
              "marginTop": "20px",
            },
            "visible": false,
            "width": "585px",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "address": "",
              "name": "",
              "onChange": [Function],
              "onEdit": [Function],
              "validateEdit": [Function],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ContactList/> shallow mount should render <ContactList/> without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ContactList
    data={Array []}
    layout="horizontal"
    message="There are no contacts added yet."
    onDelete={[Function]}
    onEdit={[Function]}
    size="small"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": "There are no contacts added yet.",
    },
    "ref": null,
    "rendered": "There are no contacts added yet.",
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": "There are no contacts added yet.",
      },
      "ref": null,
      "rendered": "There are no contacts added yet.",
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
